# Legal_LLM

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  RAPTOR_demo.ipynb  README.md  app.py  pyproject.toml  tasks.md
.github/workflows/: python-app.yml
Benchmark/: RAPTOR_benchmark.ipynb  Simple_RAG_benchmark.ipynb  binary_benchmark_question.json  shortanswer_benchmark_question.json
core/: constants.py  embdeddings.py  llms.py
core/chains/: google_search.py  query_evaluation.py  raptor.py  simple.py
core/vectorstores/: chroma.py
rag/: node.py  state.py  workflow.py
rag/chains/: answer_grading.py  document_grading.py  hallucination_grading.py  query_routing.py  question_rewriting.py  rag_generation.py
rag/parsers/invoice/: models.py  workflow.py
research/: LLM_Judger.ipynb
streamlit/: README.md  app.py  dockerfile  google_search.py  llm_agent.py  raptor_script.py  requirements.txt
streamlit/chroma_vector_store/55b6b6c8-d731-45c4-a39b-a2a01ce3512f/: index_metadata.pickle
streamlit_app/callbacks/: capturing_callback_handler.py
streamlit_app/components/: auth.py  chat.py
streamlit_app/resources/: credentials.yml
streamlit_app/tools/: clear_results.py
